--- a/plugins/raxidev/artpanel/plugin.yaml
+++ b/plugins/raxidev/artpanel/plugin.yaml
@@ -18,3 +18,7 @@ navigation:
                 label: 'Art ishlanmalar'
                 url: raxidev/artpanel/artishlanmalar
                 icon: icon-sitemap
+            side-menu-item3:
+                label: Kutubxona
+                url: raxidev/artpanel/kutubxona
+                icon: icon-sitemap
