--- a/plugins/raxidev/artpanel/models/xabarlar/fields.yaml
+++ b/plugins/raxidev/artpanel/models/xabarlar/fields.yaml
@@ -2,12 +2,14 @@ fields:
     title:
         label: "Xabarning nomlanishi (Uncha uzun bo'lmagan sarlavha!)"
         span: auto
+        required: 1
         type: text
     slug:
         label: 'Xabar sahifasining manzili (avtomatik kiritiladi)'
         span: auto
+        required: 1
         preset:
-            field: slug
+            field: title
             type: slug
         type: text
     is_active:
@@ -22,16 +24,21 @@ fields:
             konfrensiya: Konfrensiyalar
         showSearch: true
         span: auto
+        required: 1
         type: dropdown
     created_at:
-        label: 'Created at'
+        label: 'Yaratilgan sana'
+        mode: datetime
         span: auto
+        required: 1
         type: datepicker
 tabs:
     fields:
         content:
             label: 'Asosiy qism'
-            span: auto
+            size: huge
+            span: full
+            required: 1
             type: richeditor
             tab: 'Asosiy qism'
         files:
@@ -41,4 +48,18 @@ tabs:
             span: full
             type: repeater
             tab: 'Fayillarni yuklash'
-            form: {  }
+            form:
+                fields:
+                    file_name:
+                        label: 'Fayl nomi'
+                        span: auto
+                        type: text
+                    file:
+                        label: 'Faylni yuklash'
+                        mode: file
+                        useCaption: true
+                        thumbOptions:
+                            mode: crop
+                            extension: auto
+                        span: auto
+                        type: fileupload
