--- a/plugins/raxidev/artpanel/updates/version.yaml
+++ b/plugins/raxidev/artpanel/updates/version.yaml
@@ -27,3 +27,6 @@
 1.0.10:
     - 'Updated table raxidev_artpanel_xabarlar'
     - builder_table_update_raxidev_artpanel_xabarlar.php
+1.0.11:
+    - 'Created table raxidev_artpanel_slayder'
+    - builder_table_create_raxidev_artpanel_slayder.php
