Yangi o'zgarish menyu va yangi plagin qo'shdim va sozladim

--- a/plugins/raxidev/artpanel/plugin.yaml
+++ b/plugins/raxidev/artpanel/plugin.yaml
@@ -34,3 +34,7 @@ navigation:
                 label: Slayder
                 url: raxidev/artpanel/slayder
                 icon: icon-slack
+            side-menu-item6:
+                label: 'Biz haqimizda'
+                url: raxidev/artpanel/about
+                icon: icon-tablet
