--- a/plugins/raxidev/artpanel/updates/version.yaml
+++ b/plugins/raxidev/artpanel/updates/version.yaml
@@ -33,3 +33,18 @@
 1.0.12:
     - 'Created table raxidev_artpanel_about'
     - builder_table_create_raxidev_artpanel_about.php
+1.0.13:
+    - 'Created table raxidev_artpanel_statiskika_va_iqtidorli_talabalar'
+    - builder_table_create_raxidev_artpanel_statiskika_va_iqtidorli_talabalar.php
+1.0.14:
+    - 'Updated table raxidev_artpanel_statiskika_va_iqtidorli_talabalar'
+    - builder_table_update_raxidev_artpanel_statiskika_va_iqtidorli_talabalar.php
+1.0.15:
+    - 'Updated table raxidev_artpanel_statiskika_va_iqtidorli_talabalar'
+    - builder_table_update_raxidev_artpanel_statiskika_va_iqtidorli_talabalar_2.php
+1.0.16:
+    - 'Updated table raxidev_artpanel_statiskika_va_iqtidorli_talabalar'
+    - builder_table_update_raxidev_artpanel_statiskika_va_iqtidorli_talabalar_3.php
+1.0.17:
+    - 'Created table raxidev_artpanel_elektron_qollanmalar'
+    - builder_table_create_raxidev_artpanel_elektron_qollanmalar.php
