--- a/plugins/raxidev/artpanel/updates/version.yaml
+++ b/plugins/raxidev/artpanel/updates/version.yaml
@@ -51,3 +51,12 @@
 1.0.18:
     - 'Updated table raxidev_artpanel_library'
     - builder_table_update_raxidev_artpanel_library.php
+1.0.19:
+    - 'Created table raxidev_artpanel_hamkorlar'
+    - builder_table_create_raxidev_artpanel_hamkorlar.php
+1.0.20:
+    - 'Updated table raxidev_artpanel_hamkorlar'
+    - builder_table_update_raxidev_artpanel_hamkorlar.php
+1.0.21:
+    - 'Updated table raxidev_artpanel_hamkorlar'
+    - builder_table_update_raxidev_artpanel_hamkorlar_2.php
