--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME="October CMS"
 APP_ENV=local
 APP_KEY=base64:BdBlv91Vnj3HNVbLdnH73DmYBTuuwx4VF2jE4nqxPRo=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://127.0.0.1:8000
 APP_LOCALE=en
 
 ACTIVE_THEME=demo
