--- a/themes/art-fakult/meta/menus/asosiy-menyu.yaml
+++ b/themes/art-fakult/meta/menus/asosiy-menyu.yaml
@@ -1,18 +1,26 @@
 items:
     -
         title: 'Bosh sahifa'
+        nesting: null
         type: url
         url: /
         code: ''
+        reference: null
+        cmsPage: null
+        replace: null
         viewBag:
             isHidden: '0'
             cssClass: ''
             isExternal: '0'
     -
         title: Xabarlar
+        nesting: null
         type: url
         url: /
         code: ''
+        reference: null
+        cmsPage: null
+        replace: null
         viewBag:
             isHidden: '0'
             cssClass: ''
@@ -20,36 +28,52 @@ items:
         items:
             -
                 title: Yangiliklar
+                nesting: null
                 type: url
                 url: /
                 code: ''
+                reference: null
+                cmsPage: null
+                replace: null
                 viewBag:
                     isHidden: '0'
                     cssClass: ''
                     isExternal: '0'
             -
                 title: "E'lonlar"
+                nesting: null
                 type: url
                 url: /
                 code: ''
+                reference: null
+                cmsPage: null
+                replace: null
                 viewBag:
                     isHidden: '0'
                     cssClass: ''
                     isExternal: '0'
             -
                 title: Konfrensiyalar
+                nesting: null
                 type: url
                 url: /
                 code: ''
+                reference: null
+                cmsPage: null
+                replace: null
                 viewBag:
                     isHidden: '0'
                     cssClass: ''
                     isExternal: '0'
     -
         title: 'Kafedra haqida'
+        nesting: null
         type: url
         url: /
         code: ''
+        reference: null
+        cmsPage: null
+        replace: null
         viewBag:
             isHidden: '0'
             cssClass: ''
@@ -57,36 +81,52 @@ items:
         items:
             -
                 title: "O'qituvchilar ro'yxati"
+                nesting: null
                 type: url
                 url: /
                 code: ''
+                reference: null
+                cmsPage: null
+                replace: null
                 viewBag:
                     isHidden: '0'
                     cssClass: ''
                     isExternal: '0'
             -
                 title: "O'qitiladigan fanlar"
+                nesting: null
                 type: url
                 url: /
                 code: ''
+                reference: null
+                cmsPage: null
+                replace: null
                 viewBag:
                     isHidden: '0'
                     cssClass: ''
                     isExternal: '0'
             -
                 title: 'Yozilgan maqolalar'
+                nesting: null
                 type: url
                 url: /
                 code: ''
+                reference: null
+                cmsPage: null
+                replace: null
                 viewBag:
                     isHidden: '0'
                     cssClass: ''
                     isExternal: '0'
     -
         title: Kutubxona
+        nesting: null
         type: url
         url: /
         code: ''
+        reference: null
+        cmsPage: null
+        replace: null
         viewBag:
             isHidden: '0'
             cssClass: ''
@@ -94,36 +134,52 @@ items:
         items:
             -
                 title: 'Art kitoblar'
+                nesting: null
                 type: url
                 url: /
                 code: ''
+                reference: null
+                cmsPage: null
+                replace: null
                 viewBag:
                     isHidden: '0'
                     cssClass: ''
                     isExternal: '0'
             -
                 title: 'Boshqa elektron resurslar'
+                nesting: null
                 type: url
                 url: /
                 code: ''
+                reference: null
+                cmsPage: null
+                replace: null
                 viewBag:
                     isHidden: '0'
                     cssClass: ''
                     isExternal: '0'
             -
                 title: Kraswordlar
+                nesting: null
                 type: url
                 url: /
                 code: ''
+                reference: null
+                cmsPage: null
+                replace: null
                 viewBag:
                     isHidden: '0'
                     cssClass: ''
                     isExternal: '0'
     -
         title: 'Art katalog'
+        nesting: null
         type: url
         url: /
         code: ''
+        reference: null
+        cmsPage: null
+        replace: null
         viewBag:
             isHidden: '0'
             cssClass: ''
@@ -131,18 +187,26 @@ items:
         items:
             -
                 title: Rassomlar
+                nesting: null
                 type: url
                 url: /
                 code: ''
+                reference: null
+                cmsPage: null
+                replace: null
                 viewBag:
                     isHidden: '0'
                     cssClass: ''
                     isExternal: '0'
             -
                 title: 'Art ishlanmalar'
+                nesting: null
                 type: url
                 url: /
                 code: ''
+                reference: null
+                cmsPage: null
+                replace: null
                 viewBag:
                     isHidden: '0'
                     cssClass: ''
@@ -159,27 +223,39 @@ items:
         items:
             -
                 title: "Jurnal to'plamlari"
+                nesting: null
                 type: url
                 url: /
                 code: ''
+                reference: null
+                cmsPage: null
+                replace: null
                 viewBag:
                     isHidden: '0'
                     cssClass: ''
                     isExternal: '0'
             -
                 title: Maqolalar
+                nesting: null
                 type: url
                 url: /
                 code: ''
+                reference: null
+                cmsPage: null
+                replace: null
                 viewBag:
                     isHidden: '0'
                     cssClass: ''
                     isExternal: '0'
             -
                 title: Arxiv
+                nesting: null
                 type: url
                 url: /
                 code: ''
+                reference: null
+                cmsPage: null
+                replace: null
                 viewBag:
                     isHidden: '0'
                     cssClass: ''
@@ -190,7 +266,7 @@ items:
         url: /
         code: ''
         viewBag:
-            isHidden: '0'
+            isHidden: '1'
             cssClass: ''
             isExternal: '0'
 name: 'Asosiy menyu'
