--- a/plugins/raxidev/artpanel/updates/version.yaml
+++ b/plugins/raxidev/artpanel/updates/version.yaml
@@ -60,3 +60,12 @@
 1.0.21:
     - 'Updated table raxidev_artpanel_hamkorlar'
     - builder_table_update_raxidev_artpanel_hamkorlar_2.php
+1.0.22:
+    - 'Updated table raxidev_artpanel_xabarlar'
+    - builder_table_update_raxidev_artpanel_xabarlar_2.php
+1.0.23:
+    - 'Updated table raxidev_artpanel_xabarlar'
+    - builder_table_update_raxidev_artpanel_xabarlar_3.php
+1.0.24:
+    - 'Updated table raxidev_artpanel_xabarlar'
+    - builder_table_update_raxidev_artpanel_xabarlar_4.php
