--- a/plugins/raxidev/artpanel/updates/version.yaml
+++ b/plugins/raxidev/artpanel/updates/version.yaml
@@ -69,3 +69,9 @@
 1.0.24:
     - 'Updated table raxidev_artpanel_xabarlar'
     - builder_table_update_raxidev_artpanel_xabarlar_4.php
+1.0.25:
+    - 'Updated table raxidev_artpanel_xabarlar'
+    - builder_table_update_raxidev_artpanel_xabarlar_5.php
+1.0.26:
+    - 'Updated table raxidev_artpanel_xabarlar'
+    - builder_table_update_raxidev_artpanel_xabarlar_6.php
