--- a/themes/art-fakult/meta/menus/asosiy-menyu.yaml
+++ b/themes/art-fakult/meta/menus/asosiy-menyu.yaml
@@ -14,13 +14,9 @@ items:
             isExternal: '0'
     -
         title: Xabarlar
-        nesting: null
         type: url
-        url: /
+        url: /xabarlar-royxati/yangilik
         code: ''
-        reference: null
-        cmsPage: null
-        replace: null
         viewBag:
             isHidden: '0'
             cssClass: ''
@@ -28,39 +24,27 @@ items:
         items:
             -
                 title: Yangiliklar
-                nesting: null
                 type: url
-                url: /
+                url: /xabarlar-royxati/yangilik
                 code: ''
-                reference: null
-                cmsPage: null
-                replace: null
                 viewBag:
                     isHidden: '0'
                     cssClass: ''
                     isExternal: '0'
             -
                 title: "E'lonlar"
-                nesting: null
                 type: url
-                url: /
+                url: /xabarlar-royxati/elon
                 code: ''
-                reference: null
-                cmsPage: null
-                replace: null
                 viewBag:
                     isHidden: '0'
                     cssClass: ''
                     isExternal: '0'
             -
                 title: Konfrensiyalar
-                nesting: null
                 type: url
-                url: /
+                url: /xabarlar-royxati/konfrensiya
                 code: ''
-                reference: null
-                cmsPage: null
-                replace: null
                 viewBag:
                     isHidden: '0'
                     cssClass: ''
@@ -213,9 +197,13 @@ items:
                     isExternal: '0'
     -
         title: 'Ilmiy jurnal'
+        nesting: null
         type: url
         url: /
         code: ''
+        reference: null
+        cmsPage: null
+        replace: null
         viewBag:
             isHidden: '0'
             cssClass: ''
@@ -262,9 +250,13 @@ items:
                     isExternal: '0'
     -
         title: "Qayta a'loqa"
+        nesting: null
         type: url
         url: /
         code: ''
+        reference: null
+        cmsPage: null
+        replace: null
         viewBag:
             isHidden: '1'
             cssClass: ''
