--- a/plugins/raxidev/artkatalog/updates/version.yaml
+++ b/plugins/raxidev/artkatalog/updates/version.yaml
@@ -30,3 +30,6 @@
 1.0.11:
     - 'Updated table raxidev_artkatalog_artists'
     - builder_table_update_raxidev_artkatalog_artists_5.php
+1.0.12:
+    - 'Updated table raxidev_artkatalog_artists'
+    - builder_table_update_raxidev_artkatalog_artists_6.php
